K8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-stack-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /userapi/
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 3000
      # - path: /springapi/?(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: spring-service
      #       port:
      #         number: 8081


      # https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
